Runtime and Alarm works I think. Polyfilled a subset of Arc using critical-section.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ members = [
     "song",
     "rp2040-project-template",
 ]
+exclude = [
+    "rp-hal",
+    "critical-section",
+]
 
 # cargo build/run
 [profile.dev]
