--- a/song/Cargo.toml
+++ b/song/Cargo.toml
@@ -9,8 +9,8 @@ cortex-m-rt = "0.7"
 embedded-hal = { version = "0.2.5", features = ["unproven"] }
 
 defmt = "0.3"
-defmt-rtt = "0.3"
-panic-probe = { version = "0.3", features = ["print-defmt"] }
+#defmt-rtt = "0.3"
+#panic-probe = { version = "0.3", features = ["print-defmt"] }
 
 # We're using a Pico by default on this template
 rp-pico = "0.5"
@@ -21,6 +21,11 @@ usb-device = "0.2.9"
 usbd-serial = "0.1.1"
 once_cell = { version = "1.15.0", default-features = false }
 lcd-lcm1602-i2c = "0.1.0"
+critical-section = "1.1.1"
+linked_list_allocator = { version = "0.10.4", default-features = false, features = ["const_mut_refs"] }
+nb = "1.0.0"
+futures = { version = "0.3.25", default-features = false }
+# alloc-cortex-m = "0.4.2"
 
 # but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
 # sparkfun-pro-micro-rp2040 = "0.3"
