Fixed memory leak in Arc; Added Max7219 SPI; Lots of refactoring.

--- a/song/Cargo.toml
+++ b/song/Cargo.toml
@@ -25,6 +25,7 @@ critical-section = "1.1.1"
 linked_list_allocator = { version = "0.10.4", default-features = false, features = ["const_mut_refs"] }
 nb = "1.0.0"
 futures = { version = "0.3.25", default-features = false }
+bytemuck = { version = "1.12.1", default-features = false }
 # alloc-cortex-m = "0.4.2"
 
 # but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
@@ -33,3 +34,8 @@ futures = { version = "0.3.25", default-features = false }
 # If you're not going to use a Board Support Package you'll need these:
 # rp2040-hal = { version="0.6", features=["rt"] }
 # rp2040-boot2 = "0.2"
+
+
+[dependencies.arc-polyfill]
+package = "arc-polyfill"
+path = "../arc-polyfill"
