--- a/song/Cargo.toml
+++ b/song/Cargo.toml
@@ -20,11 +20,11 @@ fugit = "0.3.6"
 usb-device = "0.2.9"
 usbd-serial = "0.1.1"
 once_cell = { version = "1.15.0", default-features = false }
-lcd-lcm1602-i2c = "0.1.0"
+#lcd-lcm1602-i2c = "0.1.0"
 critical-section = "1.1.1"
 linked_list_allocator = { version = "0.10.4", default-features = false, features = ["const_mut_refs"] }
 nb = "1.0.0"
-futures = { version = "0.3.25", default-features = false }
+#futures = { version = "0.3.25", default-features = false }
 bytemuck = { version = "1.12.1", default-features = false }
 # alloc-cortex-m = "0.4.2"
 
