Whoops forgot git existed. Actually fixed screeching (disabling pwm slice doesn't turn off the output). Reorganization. A bit of midi. 7seg display program.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,12 @@
 members = [
     "first",
     "song",
+    "song-midi",
+    "seven-seg-1",
     "rp2040-project-template",
     "arc-polyfill",
+    "async-utils",
+    "hal-exts",
 ]
 exclude = [
     "rp-hal",
