--- a/seven-seg-1/Cargo.toml
+++ b/seven-seg-1/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 edition = "2021"
-name = "song"
+name = "seven-seg-1"
 version = "0.1.0"
 
 [dependencies]
@@ -26,8 +26,8 @@ linked_list_allocator = { version = "0.10.4", default-features = false, features
 nb = "1.0.0"
 #futures = { version = "0.3.25", default-features = false }
 bytemuck = { version = "1.12.1", default-features = false }
-hal-exts = { version = "0.1.0", path = "../hal-exts" }
 async-utils = { version = "0.1.0", path = "../async-utils" }
+hal-exts = { version = "0.1.0", path = "../hal-exts" }
 # alloc-cortex-m = "0.4.2"
 
 # but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
