--- a/song-midi/Cargo.toml
+++ b/song-midi/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 edition = "2021"
-name = "song"
+name = "song-midi"
 version = "0.1.0"
 
 [dependencies]
@@ -26,6 +26,7 @@ linked_list_allocator = { version = "0.10.4", default-features = false, features
 nb = "1.0.0"
 #futures = { version = "0.3.25", default-features = false }
 bytemuck = { version = "1.12.1", default-features = false }
+midly = { version = "0.5.2", default-features = false }
 hal-exts = { version = "0.1.0", path = "../hal-exts" }
 async-utils = { version = "0.1.0", path = "../async-utils" }
 # alloc-cortex-m = "0.4.2"
