Allow interrupt handlers to run multiple times, instead of only once. Therefore, FnMut is required instead of FnOnce. Added an Interval future to work like Sleep, but automatically re-schedule the interrupt when it occurs. Therefore, &Interrupt implements Future.

--- a/async-utils/Cargo.toml
+++ b/async-utils/Cargo.toml
@@ -12,3 +12,4 @@ critical-section = "1.1.1"
 fugit = "0.3.6"
 hal-exts = { version = "0.1.0", path = "../hal-exts" }
 rp-pico = "0.5.0"
+utils = { version = "0.1.0", path = "../utils" }
