--- a/headphones-1/Cargo.toml
+++ b/headphones-1/Cargo.toml
@@ -31,6 +31,8 @@ hal-exts = { version = "0.1.0", path = "../hal-exts" }
 sevenseg-5611bs = { version = "0.1.0", path = "../sevenseg-5611bs" }
 utils = { version = "0.1.0", path = "../utils" }
 max7219 = { version = "0.1.0", path = "../max7219" }
+pio-proc = "0.2.1"
+pio = "0.2.0"
 # alloc-cortex-m = "0.4.2"
 
 # but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
