--- a/pcm-encode/Cargo.toml
+++ b/pcm-encode/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bytemuck = "1.12.3"
+bytemuck = { version = "1.12.3", features = ["extern_crate_alloc"] }
