--- a/st7789/Cargo.toml
+++ b/st7789/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
-name = "max7219"
+name = "st7789"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 cortex-m = "0.7.6"
